--- a/.github/workflows/madiha.yml
+++ b/.github/workflows/madiha.yml
@@ -1,6 +1,12 @@
 name: CI/CD Pipeline
-
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - master
+  pull_request:
+    branches:
+      - master
+# on: [push, pull_request]
 
 jobs:
   build:
@@ -8,12 +14,12 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
 
     - name: Set up JDK 11
-      uses: actions/setup-java@v2
+      uses: actions/setup-java@v3
       with:
-        distribution: 'adopt' # Required input
+        distribution: 'adopt-openjdk' # Required input
         java-version: '11'
         java-package: 'jdk'
         architecture: 'x64'
