--- a/.github/workflows/madiha.yml
+++ b/.github/workflows/madiha.yml
@@ -29,5 +29,8 @@ jobs:
         server-password: '${{ secrets.GITHUB_TOKEN }}'
         overwrite-settings: true
 
+
+    - name: permission for Gradle wrapper
+        run:chmod +x ./gradlew
     - name: Build with Gradle
       run: ./gradlew build
